💄 Update css header/ex1 card

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuto Base-Js</title>
@@ -9,19 +10,25 @@
 </head>
 
 <body>
+    <header class="cours">
+        <h1>Apprendre les bases du Javascript</h1>
+        <h2>Tech update</h2>
+    </header>
 
-    <h1>Le super titre</h1>
-    <h2>Le super sous-titre</h2>
-
-    <ul>
-        <li>Lorem, ipsum dolort officia!</li>
-        <li>Lorem, ipsum dolort officia!</li>
-        <li>Lorem, ipsum dolort officia!</li>
-        <li>Lorem, ipsum dolort officia!</li>
-        <li>Lorem, ipsum dolort officia!</li>
-    </ul>
-
-    <button id="button">Faire disparaitre la liste</button>
+    <div class="exo1">
+        <p class="content">Classlist.toggle :</p>
+        <p>Instructions exercice !</p>
+        <ul>
+            <li>Lorem, ipsum dolort officia!</li>
+            <li>Lorem, ipsum dolort officia!</li>
+            <li>Lorem, ipsum dolort officia!</li>
+            <li>Lorem, ipsum dolort officia!</li>
+            <li>Lorem, ipsum dolort officia!</li>
+        </ul>
+    
+        <button id="button">CLICK</button>
+    </div>
+    
 
     <div class="flex_random">
         <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam id nesciunt aliquam sunt unde incidunt voluptates. Perspiciatis quam ratione id obcaecati? Necessitatibus ullam ratione earum voluptatibus, natus officiis voluptas?
