--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuto Base-Js</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="prism.css">
 </head>
 
 <body>
@@ -42,4 +43,5 @@
 </body>
 
 <script src="main.js"></script>
+<script src="prism.js"></script>
 </html>
