✅ Add class to exo2

--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
             <li>Lorem, ipsum dolort officia!</li>
             <li>Lorem, ipsum dolort officia!</li>
         </ul>
-    
         <button id="button">CLICK</button>
     </div>
     
-
-    <div class="flex_random">
-        <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam id nesciunt aliquam sunt unde incidunt voluptates. Perspiciatis quam ratione id obcaecati? Necessitatibus ullam ratione earum voluptatibus, natus officiis voluptas?
-        </div>
-        <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo aspernatur praesentium quos officiis pariatur harum non atque aperiam! Cum quasi accusantium facere aperiam iusto dicta quia nobis et error.
-        </div>
-        <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex fugiat eius cumque atque alias facere, doloribus veritatis modi. Vitae nam quia error iusto soluta eos totam porro tenetur repellendus iste.
-        </div>
-    </div> 
-
+    <div class="exo2">
+        <div class="flex_random">
+            <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam id nesciunt aliquam sunt unde incidunt voluptates. Perspiciatis quam ratione id obcaecati? Necessitatibus ullam ratione earum voluptatibus, natus officiis voluptas?
+            </div>
+            <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo aspernatur praesentium quos officiis pariatur harum non atque aperiam! Cum quasi accusantium facere aperiam iusto dicta quia nobis et error.
+            </div>
+            <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex fugiat eius cumque atque alias facere, doloribus veritatis modi. Vitae nam quia error iusto soluta eos totam porro tenetur repellendus iste.
+            </div>
+        </div> 
+    </div>
 </body>
 
 <script src="main.js"></script>
