--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tuto Base-Js</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="prism.css">
+    <link rel="icon" type="image.png" href="img/js.png">
 </head>
 
 <body>
