:art: Improve prism

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         </div>
     </div> 
 
+    <pre><code class="language-css">p { color: red }</code></pre>
+
 </body>
 
 <script src="main.js"></script>
