:hammer: Add Codepen

--- a/index.html
+++ b/index.html
@@ -17,18 +17,11 @@
         <h2>Tech update</h2>
     </header>
 
-    <div class="exo1">
-        <p class="content">Classlist.toggle :</p>
-        <p>Instructions exercice !</p>
-        <ul>
-            <li>Lorem, ipsum dolort officia!</li>
-            <li>Lorem, ipsum dolort officia!</li>
-            <li>Lorem, ipsum dolort officia!</li>
-            <li>Lorem, ipsum dolort officia!</li>
-            <li>Lorem, ipsum dolort officia!</li>
-        </ul>
-        <button id="button">CLICK</button>
-    </div>
+    <iframe height="450" style="width: 50%;" scrolling="no" title="" src="https://codepen.io/romain-malaterre/embed/JjJzRdV?default-tab=" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/romain-malaterre/pen/JjJzRdV">
+        </a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+    </iframe>
     
 
     <div class="flex_random">
@@ -39,8 +32,6 @@
         <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex fugiat eius cumque atque alias facere, doloribus veritatis modi. Vitae nam quia error iusto soluta eos totam porro tenetur repellendus iste.
         </div>
     </div> 
-
-    <pre><code class="language-css">p { color: red }</code></pre>
 
 </body>
 
