:bug: Fix iframe, and add title

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h2>Tech update</h2>
     </header>
 
+    <h2 class="exo_title">Le cas du toggle :</h2>
+
     <iframe height="450" style="width: 50%;" scrolling="no" title="" src="https://codepen.io/romain-malaterre/embed/JjJzRdV?default-tab=" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/romain-malaterre/pen/JjJzRdV">
         </a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
