--- a/index.html
+++ b/index.html
@@ -24,18 +24,24 @@
         </a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
         on <a href="https://codepen.io">CodePen</a>.
     </iframe>
-    
 
-    <div class="flex_random">
-        <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam id nesciunt aliquam sunt unde incidunt voluptates. Perspiciatis quam ratione id obcaecati? Necessitatibus ullam ratione earum voluptatibus, natus officiis voluptas?
-        </div>
-        <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo aspernatur praesentium quos officiis pariatur harum non atque aperiam! Cum quasi accusantium facere aperiam iusto dicta quia nobis et error.
-        </div>
-        <div class="random">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex fugiat eius cumque atque alias facere, doloribus veritatis modi. Vitae nam quia error iusto soluta eos totam porro tenetur repellendus iste.
-        </div>
-    </div> 
+    <h2 class="exo_title">Le cas du hover :</h2>
+    <iframe height="450" style="width: 50%;" scrolling="no" title="" src="https://codepen.io/romain-malaterre/embed/YzQgGpy?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/romain-malaterre/pen/YzQgGpy">
+    </a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+    </iframe>
+
+    <h2 class="exo_title">Avec un querySelector :</h2>
+    <iframe height="450" style="width: 50%;" scrolling="no" title="title switch" src="https://codepen.io/romain-malaterre/embed/XWgGjeG?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/romain-malaterre/pen/XWgGjeG">
+        title switch</a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+    </iframe>
 
 </body>
+
+<footer></footer>
 
 <script src="main.js"></script>
 <script src="prism.js"></script>
