--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         on <a href="https://codepen.io">CodePen</a>.
     </iframe>
 
-    <h2 class="exo_title">Avec un querySelector :</h2>
+    <h2 class="exo_title">Avec insert.adjacent.element  :</h2>
     <iframe height="450" style="width: 50%;" scrolling="no" title="title switch" src="https://codepen.io/romain-malaterre/embed/XWgGjeG?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/romain-malaterre/pen/XWgGjeG">
         title switch</a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
@@ -41,7 +41,8 @@
 
 </body>
 
-<footer></footer>
+<footer><center>Romain Malaterre Quentien Drouet Julien Grenouilleau William Rodriguez <br>
+    2021 Axe Dev Web</center></footer>
 
 <script src="main.js"></script>
 <script src="prism.js"></script>
