:bug: Fix Codepen

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </iframe>
 
     <h2 class="exo_title">Avec insert.adjacent.element  :</h2>
-    <iframe height="450" style="width: 50%;" scrolling="no" title="title switch" src="https://codepen.io/romain-malaterre/embed/XWgGjeG?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+    <iframe height="450" style="width: 50%;" scrolling="no" title="title switch" src="https://codepen.io/romain-malaterre/embed/XWgGjeG?default-tab=" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/romain-malaterre/pen/XWgGjeG">
         title switch</a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
         on <a href="https://codepen.io">CodePen</a>.
