--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
 </body>
 
-<footer><center>Romain Malaterre Quentien Drouet Julien Grenouilleau William Rodriguez <br>
-    2021 Axe Dev Web</center></footer>
+<footer><p>Romain Malaterre Quentien Drouet Julien Grenouilleau William Rodriguez <br>
+    2021 Axe Dev Web</p></footer>
 
 <script src="main.js"></script>
 <script src="prism.js"></script>
