:speech_balloon: Add text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 
     <h2 class="exo_title">Le cas du toggle :</h2>
 
+    <div class="text_exo">
+        <p>
+            Tout d'abord, on commence par créer deux variables avec <span>let</span>, qui selectionne la liste et le bouton :
+        </p>
+        <pre><code class="language-js">let box = document.querySelector('.random');
+let button = document.querySelector('button');</code></pre>
+        <p>
+            Ici le <span>querySelector</span> permet de retourner le premier élément qui correspond à l'objet correspondant.
+        </p>
+        <pre><code class="language-js">button.addEventListener("click", function(){</code></pre>
+        <p>
+            La méthode <span>addEventListener</span> permet de cibler un élément auquel on y ajoute un déclencheur et une fonction. Ici, le déclencheur est <span>click</span> et la fonction est directement définie.
+        </p>
+        
+    </div>
+
     <iframe height="450" style="width: 50%;" scrolling="no" title="" src="https://codepen.io/romain-malaterre/embed/JjJzRdV?default-tab=" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/romain-malaterre/pen/JjJzRdV">
         </a> by Romain Malaterre (<a href="https://codepen.io/romain-malaterre">@romain-malaterre</a>)
