:pencil2: Fix text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>
             Tout d'abord, on commence par créer deux variables avec <span>let</span>, qui selectionne la liste et le bouton :
         </p>
-        <pre><code class="language-js">let box = document.querySelector('.random');
+        <pre><code class="language-js">let tableau = document.querySelector('ul');
 let button = document.querySelector('button');</code></pre>
         <p>
             Ici le <span>querySelector</span> permet de retourner le premier élément qui correspond à l'objet correspondant.
