:speech_balloon: Add text

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@ let button = document.querySelector('button');</code></pre>
         <p>
             La méthode <span>addEventListener</span> permet de cibler un élément auquel on y ajoute un déclencheur et une fonction. Ici, le déclencheur est <span>click</span> et la fonction est directement définie.
         </p>
+        <pre><code class="language-js">    tableau.classList.toggle("click");
+})</code></pre>
+        <p>
+            A l'intérieur de la fonction, on sélectionne donc la variable <span>tableau</span> qu'on a définie auparavant, puis on y ajoute <span>classList</span>, qui retourne les attributs de classe de l'éléments sélectionné, ainsi que, <span>toggle</span> qui fait basculer entre vrai ou faux l'existence de la classe.<br> Voici donc un exemple ci-dessous:
+        </p>
         
     </div>
 
