:rocket: Add success card with anim

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@ let subtitle = document.querySelector('h2');</code></pre>
         on <a href="https://codepen.io">CodePen</a>.
     </iframe>
 
+    <div class="success">
+        <i class="fas fa-award"></i>
+        <h3>Félicitations !</h3>
+        <p>Vous savez désormais manier le JS à la perfection.</p>
+    </div>
+    
+    
+
 </body>
 
 <footer><p>Romain Malaterre Quentien Drouet Julien Grenouilleau William Rodriguez <br>
@@ -120,4 +128,5 @@ let subtitle = document.querySelector('h2');</code></pre>
 
 <script src="main.js"></script>
 <script src="prism.js"></script>
+<script src="https://kit.fontawesome.com/895897f381.js" crossorigin="anonymous"></script>
 </html>
