:sparkles: Add arrow to up

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <hr>
     <div class="text_exo">
         <p>
-            Tout d'abord, on commence par créer deux variables avec <span>let</span>, qui selectionne la liste et le bouton :
+            Tout d'abord, on commence par créer deux variables avec <span>let</span>, qui selectionnent la liste et le bouton :
         </p>
         <pre><code class="language-js">let tableau = document.querySelector('ul');
 let button = document.querySelector('button');</code></pre>
@@ -118,6 +118,8 @@ let subtitle = document.querySelector('h2');</code></pre>
         <h3>Félicitations !</h3>
         <p>Vous savez désormais manier le JS à la perfection.</p>
     </div>
+
+    <i class="fas fa-chevron-up top"></i>
     
     
 
