:pencil2: Fix text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ let button = document.querySelector('button');</code></pre>
     <hr>
     <div class="text_exo">
         <p>
-            Tout d'abord, on commence par créer deux variables avec <span>let</span>, qui selectionne le titre et le sous-titre :
+            Tout d'abord, on commence par créer deux variables avec <span>let</span>, qui selectionnent le titre et le sous-titre :
         </p>
         <pre><code class="language-js">let title = document.querySelector('h1');
 let subtitle = document.querySelector('h2');</code></pre>
